--- a/css/header.css
+++ b/css/header.css
@@ -13,6 +13,8 @@ header {
     justify-content: space-between;
     top: 0;
     right: 0;
+    font-family: 'Josefin Sans', sans-serif;
+
 }
 
 .navbar__header {
@@ -61,7 +63,10 @@ header {
     line-height: 1rem;;
 
 }
-    
+
+.navbar-list__item-link--active {
+    color: var(--primary-color);
+}
 
 .navbar-list__item::before {
     content: "";
@@ -101,24 +106,40 @@ header {
     position: absolute;
     top: 100%;
     width: 100%;
-    height: fit-content;
+    max-height: 50vh;
     background-color: #ffffff;
     box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.4);
-    z-index: 1;
+    z-index: 10;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    overflow: auto;
     /* display: none; */
 }
 
 .navbar__search__show-info {
-    margin: 0 10px;
+    margin: 10px 10px;
 }
 
 .img_search {
-    width: 50px;
+    height: 50px;
 }
 
 .img_name {
     color: #333;
     text-decoration: none;
+    display: block;
+    height: 50px;
+}
+
+.img_name:hover {
+    display: block;
+    background-color: #e3e3e3;
+}
+
+.img_name span {
+    color: #333;
+    width: 100%;
+    top: 0;
 }
 
 .close_search {
@@ -201,6 +222,11 @@ header {
     padding: 10px;
 }
 
+.name_user {
+    font-size: 1rem;
+}
+
+
 .user a {
     color: #333;
     text-decoration: none;
@@ -215,15 +241,22 @@ header {
 .user a:hover {
     color: var(--primary-color);
     background-color: #ececec;
+    width: 100%;
 }
 
 .cart {
-    position: relative;
+    /* position: relative; */
     color: var(--text-color);
+    display: flex;
 }
 .cart-link {
     color: var(--text-color);
     text-decoration: none;
+    position: relative;
+}
+
+.cart-link:hover {
+    color: #333;
 }
 
 .cart__count {
@@ -231,10 +264,10 @@ header {
     color: #ffffff;
     font-size: 0.8rem;
     line-height: 0.9rem;
-    padding: 2px 1px 1px 1px;
+    padding: 2px 1px 0px 1px;
     text-align: center;
-    top: 0;
-    right: -6px;
+    top: -2px;
+    right: -4px;
     width: 0.9rem;
     height: 0.9rem;
     background-color: var(--primary-color);
@@ -242,6 +275,40 @@ header {
     box-sizing: content-box;
     border: 2px solid #fff;
 }
+
+.noty__count {
+    position: absolute;
+    color: #ffffff;
+    font-size: 0.8rem;
+    line-height: 0.9rem;
+    padding: 2px 1px 0px 1px;
+    text-align: center;
+    top: -2px;
+    left: 19px;
+    width: 0.9rem;
+    height: 0.9rem;
+    background-color: var(--primary-color);
+    border-radius: 50%;
+    box-sizing: content-box;
+    border: 2px solid #fff;
+}
+
+.notify {
+    position: absolute;
+    font-size: 0.8rem;
+    line-height: 1rem;
+    width: 220px;
+    max-height: 150px;
+    right: 0;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 1px 4px 5px rgba(0, 0, 0, 0.4);
+    display: none;
+    overflow: auto;
+    z-index: 10;
+}
+
 
 .cart-link i, .login i {
     padding: 5px;
@@ -253,6 +320,11 @@ header {
     background-color: #cdcdcd;
     border-radius: 50%;
     cursor: pointer;
+    color: #333;
+}
+
+.cart-link--notify:hover .notify{
+    display: block;
 }
 
 .navbar__menu {
@@ -260,6 +332,7 @@ header {
     margin-left: 10px;
     display: none;
 }
+
 
 
 /* responsive */
@@ -325,5 +398,8 @@ header {
         background-color:#cdcdcd;
     }
     
+    .name_user {
+        display: none;
+    }
 }
 
